--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -1,7 +1,7 @@
 oh hi 
 <hr>
     {% for a in data %}
-    {{a[0]}}    attmpted    {{a[1]}} times<br>
+    {{a[0]}}    attmpted    {{a[1]}} }times<br>
     {% endfor %}
 
 
