--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -1,9 +1,14 @@
+
+<code>
 oh hi 
 <hr>
-    {% for a in data %}
-    {{a[0]}}    attmpted    {{a[1]}} }times<br>
-    {% endfor %}
-
-
-    <hr>
     <a href="https://github.com/pronto/SSH-Ranking">more info on the gihub</a>
+
+    <hr>omgifthisworkswtf<hr>
+
+    {% autoescape false %}
+    {% for cray in craylist %}
+    {{ cray }}<br>
+    {% endfor %}
+    {% endautoescape %}
+    <hr>
