--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -11,19 +11,20 @@
             <div id="maincontent">
     <a href="https://github.com/pronto/SSH-Ranking">more info on the gihub</a>
     <h2>SSH-ranking!</h2>
-    <ol>
+    <!-- list css stuff from http://www.red-team-design.com/css3-ordered-list-styles -->
+    <ol class="rounded-list">
     {% autoescape false -%}
     {% for ip in uniq_ips -%}
     {% set rowip = ip[0] -%}
-    <li class="items text">
-    <p><b>{{ ip[0] }}</b> attempted <b>{{ ip[1] }}</b> times </br>
+    <li>
+    <p><a href=""><b>{{ ip[0] }} </b> attempted <b>{{ ip[1] }}</b> times </a>
     with users:
     {% for user in lollist -%}
         {% if user[0][0] == rowip -%}
             <b>{{ user[1] }}</b>:{{ user[2] }}
             {% endif -%}
             {% endfor -%}
-            <br>i
+            <br>
             </p>
             </li>
     {% endfor -%}
