redid the web-ui...again check out /alltime

--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -1,4 +1,10 @@
-<body bgcolor=gray>
-    header thing, oh joy!<br>
-    menu stuff here <br>
-    <hr>
+<!doctype html>
+<html>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <head>
+        <title>SSHranking</title>
+        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='new.css') }}">
+    </head>
+
+    <body>
+<h1> <center>SSH ranking!</center></h1>
