--- a/web/static/new.css
+++ b/web/static/new.css
@@ -8,9 +8,10 @@ h1 {
 #box{
     width:80%;
     background:#606060;
-    padding:1px;
+    padding:0px;
     margin-left:auto;
     margin-right:auto;
+    clear:both;
 }
 
 #listitem{
@@ -24,6 +25,7 @@ h1 {
 }
 .ip{
     font-size:17px;
+    font-size-adjust: 0.5;
     display: inline;
 }
 .ip2{
@@ -47,8 +49,71 @@ h1 {
 }
 .userlist {
     font-size:10pt;
+
 }
 #listitem:hover{
     background:#A8A8A8;
-}
 
+}
+    /* -------------------------------------------------- */
+    /* roundbar-grey */
+    /* http://matthewjamestaylor.com/centered-menus/# */
+    /* -------------------------------------------------- */
+    #roundbar-grey {
+        clear:left;
+        float:left;
+        width:100%;
+        background:#B7B7B7 url(roundbar-grey.gif) 0 25% repeat;
+        font-family:Trebuchet MS, Helvetica, sans-serif;
+        border-bottom:1px solid #A8A8A8;
+        overflow:hidden;
+    }
+    #roundbar-grey ul {
+        clear:left;
+        float:left;
+        list-style:none;
+        margin:0;
+        padding:0;
+        position:relative;
+        left:50%;
+        text-align:center;
+    }
+    #roundbar-grey ul li {
+        display:block;
+        float:left;
+        list-style:none;
+        margin:0;
+        padding:0;
+        position:relative;
+        right:50%;
+    }
+    #roundbar-grey li:hover{
+        background:#A8A8A8;
+}
+    #roundbar-grey ul li.first {
+        border-left:1px solid #A8A8A8;
+    }
+    #roundbar-grey ul li.last {
+        border-right:1px solid #C8C8C8;
+    }
+    #roundbar-grey ul li a {
+        display:block;
+        margin:0;
+        padding:.4em .8em;
+        color:#000;
+        text-decoration:none;
+        border-left:1px solid #C8C8C8;
+        border-right:1px solid #A8A8A8;
+        line-height:1.3em;
+    }
+    #roundbar-grey ul li a span {
+        display:block;
+    }
+    #roundbar-grey ul li.active a {
+        background:url(roundbar-grey.gif) 0 75% repeat;
+        font-weight:bold;
+    }
+    #roundbar-grey ul li a:hover {
+        background:url(roundbar-grey.gif) 0 75% repeat;
+    }
+    
