--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -1,51 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-        <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-            <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-            <head>
-                <title>ssh-rank!</title>
-                <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
-            </head>
+{% include 'header.html' %}
+lets rank things
 
-            blarg <br>
-            <div id="maincontent">
-    <a href="https://github.com/pronto/SSH-Ranking">more info on the gihub</a>
-    <h2>SSH-ranking!</h2>
-    the data will is auto-updating, but the webpage is not <br>User list is set to show at most 10 users.<br>
-    This is a list of IPs that have attempted to brute force my server via SSH
-    <!-- list css stuff from http://www.red-team-design.com/css3-ordered-list-styles -->
-    <ol class="rounded-list">
-    {% for ip in uniq_ips -%}
-    {% set rowip = ip[0] -%}
-    <li>
-    <p class="rounded-list">
-    <font size=3> <b>{{ ip[0] }} </b> attempted <b>{{ ip[1] }}</b> times<!--</a>--></font>
-{% for lasta in datelist -%} 
-{% if lasta[0] == ip[0] -%}
- | Last attempt on: {{ lasta[1] }}
-{% endif -%}
-{% endfor -%}
-
-</br>
-{% for res in alldns -%}
-{% if res.good != '-' -%}
-{% if res.ip == rowip -%}
-&nbsp;&nbsp;&nbsp;&nbsp;<b>{{res.rdns}}</b> is <b>
-    {% if res.good == 'good' -%}
-    <font color="green">{% else -%}
-        <font color="#8B0000"> {% endif -%}
-            {{res.good}}</font></b><br>
-{% endif -%}
-{% endif -%}
-{% endfor -%}
-&nbsp;&nbsp;&nbsp;
-{% for user in userlist -%}
-{% if user[0][0] == rowip -%}
-        <b> {{ user[1] -}}</b>:{{ user[2] -}}
-            {% endif -%}
-            {% endfor -%}<br>
-            {% endfor -%}
-            </p>
-    <hr>
-</ol>
-<hr>
+{% include 'footer.html'%}
