testing adding more pages, it worked.

--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -16,6 +16,8 @@ All time
 7 days
 {% elif subhead == 'main' -%}
 Hi.
+{% elif subhead == '30day' -%}
+Last 30 days
 {% else -%}
 404'd
 {% endif %}
@@ -25,6 +27,7 @@ Hi.
     <ul>
         <li class="active"><a href="/ssh_rank/lists/all">All Time</a></li>
         <li class="active"><a href="/ssh_rank/lists/week">7 days</a></li>
+        <li class="active"><a href="/ssh_rank/lists/30day">30 days</a></li>
         <li class="active"><a href="https://github.com/pronto/SSH-Ranking" target="_blank">GitHub Repo</a></li>
     </ul>
 </div>
