--- a/web/templates/ip_info.html
+++ b/web/templates/ip_info.html
@@ -6,18 +6,16 @@
 <b>{{user[0]}}</b>:{{user[1]-}}, {% endfor %}
 {% endfor -%}
 </pre>
-<p> dates/times attempted:</p><code>
+<p> dates/times attempted:</p><pre>
 year:mon<br>
---------> day - attempts<br>
+--------> day - attempts that day<br>
 {% for year, year_group in dates|groupby('year') -%}
 {% for month, month_list in year_group|groupby('month') -%}
 {{year}}:{{month}}<br>
 {% for day , day_list in month_list|groupby('day') -%}
-
-------->
-        {{day}} -  {{day_list|count}}<br>
-        {%endfor-%}
+------->{{day}} -  {{day_list|count}}<br>
+{%endfor-%}
 {% endfor %}
 {%endfor%}
-</code>
+</pre>
 {% include 'footer.html' %}
