tiny change to this one

--- a/web/templates/ip_info.html
+++ b/web/templates/ip_info.html
@@ -11,11 +11,11 @@ year:mon<br>
 --------> day - attempts that day<br>
 {% for year, year_group in dates|groupby('year') -%}
 {% for month, month_list in year_group|groupby('month') -%}
-{{year}}:{{month}}<br>
+{{year}}:{{month}}
 {% for day , day_list in month_list|groupby('day') -%}
-------->{{day}} -  {{day_list|count}}<br>
+------->{{day}} -  {{day_list|count}}
 {%endfor-%}
-{% endfor %}
-{%endfor%}
+{% endfor -%}
+{%endfor -%}
 </pre>
 {% include 'footer.html' %}
