header.html update for user page

--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -25,6 +25,8 @@ Last 24 hours
 About this website.
 {% elif subhead == 'ipinfo' -%}
 IP info for {{ ip }}
+{% elif subhead == 'users' -%}
+Info page for {{ user }}
 {% else -%}
 404'd
 {% endif %}
