--- a/web/templates/tables.html
+++ b/web/templates/tables.html
@@ -12,7 +12,7 @@
     {% set rowip = ip[0] -%}
 <tbody id='{{tableid.next()}}'>
     <tr>
-        <td><b>{{ ip[0]}}</b> </td>
+        <td><b><a href="/ssh_rank/ip_info/{{ ip[0]}}">{{ ip[0] }}</a></b> </td>
         <td><b>{{ip[1]}}</b></td>
         <td>      {% for res in alldns -%}
                 {% if res.ip == rowip -%}
@@ -30,13 +30,13 @@
             {% endfor -%}
 
         </td>
-        <td>the moon</td>
+        <td><font size="-5">the moon</font></td>
    </tr>
    <tr >
         <td>Users:</td>
         <td colspan="2">{% for user in userlist -%}
                 {% if user[0][0] == rowip -%}
-                <b>{{ user[1] }}</b>:{{user[2]}}
+                <b><a href="/ssh_rank/users/{{ user[1] }}">{{ user[1] }}</a></b>:{{user[2]}}
                 {% endif -%}
                 {% endfor -%} 
         </td>
@@ -56,9 +56,3 @@
 </table>
 <hr>
 
-{% set cycling_list = cycler('val1', 'val2', 'val3') %}
-<pre>
-{{ cycling_list.current }} == {{ cycling_list.next() }}  
-{{ cycling_list.current }} == {{ cycling_list.next() }}  
-{{ cycling_list.current }} == {{ cycling_list.next() }}  
-</pre>
