user info links

--- a/web/templates/ip_info.html
+++ b/web/templates/ip_info.html
@@ -3,7 +3,7 @@
 <pre>
 {% for user_batch in users|batch(15) -%} 
 {% for user in user_batch -%}
-<b>{{user[0]}}</b>:{{user[1]-}}, {% endfor %}
+<b><a href="/ssh_rank/users/{{user[0]}}">{{ user[0] }}</a></b>:{{user[1]-}}, {% endfor %}
 {% endfor -%}
 </pre>
 <p> dates/times attempted:</p><pre>
