--- a/web/static/new.css
+++ b/web/static/new.css
@@ -26,6 +26,10 @@ margin-right:auto;
 h2{
     width:300px;
 }
+h3{
+    color:#9e9e9e;
+    font-size:23pt;
+}
 #topLogo {float:left;margin-top:0px;margin-left:10px;}
 p {
     color:#9E9E9E;
