tree views?! also footer

--- a/web/templates/footer.html
+++ b/web/templates/footer.html
@@ -1,5 +1,6 @@
 </div>
-<center>yay, it works.</center>
-
+<div id="footer">
+    <a target="_blank" href="https://pronto185.com">a pronto creation!</a>
+</div>
 </body>
 </html>
