--- a/web/templates/tree.html
+++ b/web/templates/tree.html
@@ -7,7 +7,7 @@
 
 <pre>
 {% for user,list in tree %}
-<b>{{user}}</b> : {% for ip in list -%} <a href="/ssh_rank/tree/ip/{{ip}}">{{ip}}</a>, {% endfor -%}  <br>
+<b>{{user}}</b> : {% for ip2 in list -%} {% if ip2 != ip -%}<a href="/ssh_rank/tree/ip/{{ip2}}">{{ip2}}</a>{%else-%} {{ip2}}{%endif-%}, {% endfor -%}  <br>
 
 {% endfor -%}
 </pre>
