--- a/web/templates/users_sort_by_total.html
+++ b/web/templates/users_sort_by_total.html
@@ -12,7 +12,7 @@
 {% for user in users -%}
 <tbody id='{{tableid.next()}}'>
     <tr>
-        <td><a id='footer' href="/ssh_rank/users/{{user[0]}}">{{user[0]}}</a></td>
+        <td><a id='footer' href="/ssh_rank/user/{{user[0]}}">{{user[0]}}</a></td>
             <td>{{user[1]}}
                 {% endfor -%}
         </table></div>
